// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuItem renders 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <li
      aria-disabled="false"
      class="text-black bg-transparent hover:bg-blue focus:bg-blue px-4 py-[0.375rem] min-w w-auto min-h sm:min-h md:min-h relative cursor-pointer transition-colors duration-150 ease-in overflow-hidden whitespace-normal text-left no-underline flex items-center justify-start outline-none appearance-none leading-4"
      role="menuitem"
      tabindex="-1"
    >
      <div
        class="flex flex-1 max-w"
      >
        <div
          class="flex flex-col flex-1 min-w"
        >
          <div
            class="flex items-center"
          >
            <span
              class="flex-1 text-md leading-5"
            >
              1
            </span>
          </div>
        </div>
      </div>
    </li>
  </div>
</div>
`;

exports[`MenuItem renders checkmarked 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <li
      aria-disabled="false"
      class="text-black bg-transparent hover:bg-blue focus:bg-blue px-4 py-[0.375rem] min-w w-auto min-h sm:min-h md:min-h relative cursor-pointer transition-colors duration-150 ease-in overflow-hidden whitespace-normal text-left no-underline flex items-center justify-start outline-none appearance-none leading-4"
      role="menuitem"
      tabindex="-1"
    >
      <div
        class="flex flex-1 max-w"
      >
        <div
          class="flex flex-col flex-1 min-w"
        >
          <div
            class="flex items-center"
          >
            <div
              class="w-4 inline-flex mr-2"
            >
              <svg
                class="PicassoSvgCheckMinor16-root"
                style="min-width: 16px; min-height: 16px;"
                viewBox="0 0 16 16"
              >
                <path
                  d="m6.5 9.793 4-4 .707.707-4 4-.707.707L3.793 8.5l.707-.707 2 2Z"
                />
              </svg>
            </div>
            <span
              class="flex-1 text-md leading-5 text-semibold"
            >
              1
            </span>
          </div>
        </div>
      </div>
    </li>
  </div>
</div>
`;

exports[`MenuItem renders in title case with global prop 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="Picasso-root"
    >
      <li
        aria-disabled="false"
        class="text-black bg-transparent hover:bg-blue focus:bg-blue px-4 py-[0.375rem] min-w w-auto min-h sm:min-h md:min-h relative cursor-pointer transition-colors duration-150 ease-in overflow-hidden whitespace-normal text-left no-underline flex items-center justify-start outline-none appearance-none leading-4"
        role="menuitem"
        tabindex="-1"
      >
        <div
          class="flex flex-1 max-w"
        >
          <div
            class="flex flex-col flex-1 min-w"
          >
            <div
              class="flex items-center"
            >
              <span
                class="flex-1 text-md leading-5"
              >
                Arrow
              </span>
            </div>
          </div>
        </div>
      </li>
    </div>
  </div>
</div>
`;

exports[`MenuItem renders in title case with local prop 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <li
      aria-disabled="false"
      class="text-black bg-transparent hover:bg-blue focus:bg-blue px-4 py-[0.375rem] min-w w-auto min-h sm:min-h md:min-h relative cursor-pointer transition-colors duration-150 ease-in overflow-hidden whitespace-normal text-left no-underline flex items-center justify-start outline-none appearance-none leading-4"
      role="menuitem"
      tabindex="-1"
    >
      <div
        class="flex flex-1 max-w"
      >
        <div
          class="flex flex-col flex-1 min-w"
        >
          <div
            class="flex items-center"
          >
            <span
              class="flex-1 text-md leading-5"
            >
              Arrow
            </span>
          </div>
        </div>
      </div>
    </li>
  </div>
</div>
`;

exports[`MenuItem renders with a sub menu arrow 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <li
      aria-disabled="false"
      class="text-black bg-transparent hover:bg-blue focus:bg-blue px-4 py-[0.375rem] min-w w-auto min-h sm:min-h md:min-h relative cursor-pointer transition-colors duration-150 ease-in overflow-hidden whitespace-normal text-left no-underline flex items-center justify-start outline-none appearance-none leading-4"
      role="menuitem"
      tabindex="-1"
    >
      <div
        class="flex flex-1 max-w"
      >
        <div
          class="flex flex-col flex-1 min-w"
        >
          <div
            class="flex items-center"
          >
            <span
              class="flex-1 text-md leading-5"
            >
              1
            </span>
            <div
              class="inline-flex ml-2"
            >
              <svg
                class="PicassoSvgChevronMinor16-root"
                style="min-width: 16px; min-height: 16px;"
                viewBox="0 0 16 16"
              >
                <path
                  d="m5.997 3.29 4 4 .707.707-.707.707-4 4-.707-.707 4-4-4-4 .707-.707Z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </li>
  </div>
</div>
`;

exports[`MenuItem renders with description 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <li
      aria-disabled="false"
      class="text-black bg-transparent hover:bg-blue focus:bg-blue px-4 py-[0.375rem] min-w w-auto min-h sm:min-h md:min-h relative cursor-pointer transition-colors duration-150 ease-in overflow-hidden whitespace-normal text-left no-underline flex items-center justify-start outline-none appearance-none leading-4"
      role="menuitem"
      tabindex="-1"
    >
      <div
        class="flex flex-1 max-w"
      >
        <div
          class="flex flex-col flex-1 min-w"
        >
          <div
            class="flex items-center"
          >
            <span
              class="flex-1 text-md leading-5"
            >
              1
            </span>
          </div>
          <div
            class="text-2xs mt-1 text-graphite"
          >
            details
          </div>
        </div>
      </div>
    </li>
  </div>
</div>
`;
